--- a/.eslintrc
+++ b/.eslintrc
@@ -14,5 +14,8 @@
     "prefer-const": "error",
     "eqeqeq": "error",
     "indent": ["error", 2]
+  },
+  "globals": {
+    "Chart": "readonly"
   }
 }
